# AGS

./: .gitignore  .pre-commit-config.yaml  AETHERIUM_GENESIS_EXPLAINED.txt  AGENTS.md  AGENTS_GUIDE.md  ARCHITECTURE.md  GENESIS_OMNI_STATE_MANIFEST.md  README.md  SECURITY.md  SYSTEM_ANALYSIS_TH.md  USAGE_EN.md  USAGE_TH.md  access_keys.json  awaken.py  docker-compose.yml  openapi.json  pytest.ini  requirements-mobile.txt  requirements.txt  run.py  server_log.txt  start_genesis.bat  test_iron_core.py  verify_diagnostics.py
.github/: dependabot.yml
ai_utils_package/: LICENSE  README.md  pyproject.toml
ai_utils_package/ai_utils/text/: preprocess.py
ai_utils_package/tests/: test_preprocess.py
bus/: __init__.py  benchmark_rfc001.py  benchmark_tachyon.py  benchmark_v4.py  event_bus.py  intent.py  rsi_simulation.py  test_integration.py
core/: __init__.py  diagnostic_api.py  immune.py  lifecycle.py  main.py
data/: akashic_records.json
docs/: AETHERBUS_TACHYON_INTEGRATION.md  AI_AUTOMATION_PLATFORM_WORKPLAN_TH.md  AI_OS_PLATFORM_ROADMAP_TH.md  ARCHITECTURE_AUDIT.md  BUSINESS_PLAN_TH.md  CANONICAL_TECHNICAL_SPEC.md  CONCEPT_SHEET.md  ENTROPY_ECONOMY_TECHNICAL_SPEC_TH.md  GENESIS_MANIFESTO_TH.md  INTERNAL_AUDIT_REWARD_INTENT_WORKPLAN_TH.md  PLATFORM_AUDIT_AND_WORKPLAN.md  README_EN.md  RESONANCE_ENTROPY_TO_AI_PARTNER_MAPPING.md  TECHNICAL_BLUEPRINT_TH.md  UNIFIED_AI_OS_INTEGRATION.md  USER_MANUAL_EN.md  VASA_1_RESEARCH_SUMMARY.md  dependency_inventory.md  directive_envelope_standard.md  protocol_matrix.json
governance/: __init__.py  audit.py  patimokkha.py  (+3 more)
(+192 files in other folders)
